pull full list of repo names and output to text file
Signed-off-by: Andrew Brandt <andrew.brandt@hashgraph.com>

--- a/action.yaml
+++ b/action.yaml
@@ -14,5 +14,12 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: List all repos in the Org
+    - name: List all repos in org
       shell: bash
+      run: |
+        echo "Fetching repos for organization: ${{ inputs.org }}"
+        curl -s -H "Authorization: token ${{ inputs.token }}" \
+             -H "Accept: application/vnd.github+json" \
+             "https://api.github.com/orgs/${{ inputs.org }}/repos?per_page=100" |
+        jq -r '.[].full_name' > repo-list.txt
+        echo "Repos written to repo-list.txt"
