--- a/action.yaml
+++ b/action.yaml
@@ -31,7 +31,7 @@ runs:
       run: |
         ORG_NAME=$(echo "$GITHUB_REPOSITORY" | cut -d'/' -f1)
         echo "Org name is: ${ORG_NAME}"
-        cat "${ORG_NAME}" > org-name.txt
+        echo "${ORG_NAME}" > org-name.txt
         echo "Fetching repos for organization: ${{ inputs.org }}"
         gh api --paginate "orgs/$ORG_NAME/repos" --jq '.[].full_name' > repo-list.txt
         echo "Repos written to repo-list.txt"
