--- a/action.yaml
+++ b/action.yaml
@@ -76,3 +76,24 @@ runs:
       run: |
         echo "Full repo-properties.json file is:"
         cat repo-properties.json
+
+    - name: Convert JSON to formatted YAML
+      shell: bash
+      run: |
+        ORG_NAME=$(cat org-name.txt)
+        echo "org: $ORG_NAME" > repo-properties.yaml
+        echo "repositories:" >> repo-properties.yaml
+    
+        jq -r 'to_entries[] |
+          .key as $repoName |
+          "  - name: \($repoName)\n    last-date-modified: \"\"\n" +
+          (.value | map("    \(.property_name): \"\(.value)\"") | join("\n"))' repo-properties.json >> repo-properties.yaml
+    
+        echo "YAML written to repo-properties.yaml"
+
+    - name: Print out the repo-properties.yaml
+      shell: bash
+      run: |
+        echo "Full repo-properties.yaml file is:"
+        cat repo-properties.yaml
+
